--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,17 +41,17 @@
         </section>
         <section class="photo-grid">
             <img src="images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
-            <img src="images/photo-grid-atharva-tulsi.jpg" alt="" class="photo-grid__item">
-            <img src="images/photo-grid-tuman.jpg" alt="" class="photo-grid__item">
-            <img src="images/photo-grid-sochi.jpg" alt="" class="photo-grid__item">
-            <img src="images/photo-grid-arisa.jpg" alt="" class="photo-grid__item">
-            <img src="images/photo-grid-baikal.jpg" alt="" class="photo-grid__item">
-            <img src="images/photo-grid-elbrus.jpg" alt="" class="photo-grid__item">
-            <img src="images/photo-grid-kondratiev.jpg" alt="" class="photo-grid__item"> 
-            <img src="images/photo-grid-kamchatka-1.jpg" alt="" class="photo-grid__item">
-            <img src="images/photo-grid-kamchatka-2.jpg" alt="" class="photo-grid__item">
-            <img src="images/photo-grid-baikal-2.jpg" alt="" class="photo-grid__item">
-            <img src="images/photo-grid-ergaki.jpg" alt="" class="photo-grid__item">
+            <img src="images/photo-grid-atharva-tulsi.jpg" alt="Горы" class="photo-grid__item">
+            <img src="images/photo-grid-tuman.jpg" alt="Поле" class="photo-grid__item">
+            <img src="images/photo-grid-sochi.jpg" alt="Туманный лес" class="photo-grid__item">
+            <img src="images/photo-grid-arisa.jpg" alt="Лёд" class="photo-grid__item">
+            <img src="images/photo-grid-baikal.jpg" alt="Берег" class="photo-grid__item">
+            <img src="images/photo-grid-elbrus.jpg" alt="Вершины гор" class="photo-grid__item">
+            <img src="images/photo-grid-kondratiev.jpg" alt="Пешеход" class="photo-grid__item"> 
+            <img src="images/photo-grid-kamchatka-1.jpg" alt="Туман на Камчатке" class="photo-grid__item">
+            <img src="images/photo-grid-kamchatka-2.jpg" alt="Рассвет на Камчатке" class="photo-grid__item">
+            <img src="images/photo-grid-baikal-2.jpg" alt="Берег на Байкале" class="photo-grid__item">
+            <img src="images/photo-grid-ergaki.jpg" alt="Еще одни горы в тумане" class="photo-grid__item">
         </section>
         <section class="places">
             <div class="place">
@@ -129,13 +129,11 @@
         </section>
     </main>
     <footer class="footer">
-        <ul class="footer__items">
-            <li><a href="" class="footer__link">Карты</a></li>
-            <li><a href="" class="footer__link">Погода</a></li>
-            <li><a href="" class="footer__link">Расписание</a></li>
-            <li><a href="" class="footer__link">Календарь</a></li>
-            <li><a href="" class="footer__link">Путешествия</a></li>
-        </ul>
+        <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+        <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+        <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+        <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+        <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
         <h class="footer__copyright">&copy; 2020 Петрова Настя</h>
     </footer>
 </body>
