--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li>
                 <a href="#" class="header__lang-link header__lang-link_inactive">En</a>
             </li>
-        </div>
+        </ul>
     </header>
     <main class="content">
         <section class="lead">
@@ -134,7 +134,7 @@
         <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
         <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
         <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
-        <h class="footer__copyright">&copy; 2022 Петрова Настя</h>
+        <p class="footer__copyright">&copy; 2022 Петрова Настя</p>
     </footer>
 </body>
 </html>
