--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
             </ul>
         </section>
         <section class="photo-grid">
-            <img src="images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
-            <img src="images/photo-grid-atharva-tulsi.jpg" alt="Горы" class="photo-grid__item">
-            <img src="images/photo-grid-tuman.jpg" alt="Поле" class="photo-grid__item">
-            <img src="images/photo-grid-sochi.jpg" alt="Туманный лес" class="photo-grid__item">
-            <img src="images/photo-grid-arisa.jpg" alt="Лёд" class="photo-grid__item">
-            <img src="images/photo-grid-baikal.jpg" alt="Берег" class="photo-grid__item">
-            <img src="images/photo-grid-elbrus.jpg" alt="Вершины гор" class="photo-grid__item">
-            <img src="images/photo-grid-kondratiev.jpg" alt="Пешеход" class="photo-grid__item"> 
-            <img src="images/photo-grid-kamchatka-1.jpg" alt="Туман на Камчатке" class="photo-grid__item">
-            <img src="images/photo-grid-kamchatka-2.jpg" alt="Рассвет на Камчатке" class="photo-grid__item">
-            <img src="images/photo-grid-baikal-2.jpg" alt="Берег на Байкале" class="photo-grid__item">
-            <img src="images/photo-grid-ergaki.jpg" alt="Еще одни горы в тумане" class="photo-grid__item">
+            <div><img src="images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-atharva-tulsi.jpg" alt="Горы" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-tuman.jpg" alt="Поле" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-sochi.jpg" alt="Туманный лес" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-arisa.jpg" alt="Лёд" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-baikal.jpg" alt="Берег" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-elbrus.jpg" alt="Вершины гор" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-kondratiev.jpg" alt="Пешеход" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-kamchatka-1.jpg" alt="Туман на Камчатке" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-kamchatka-2.jpg" alt="Рассвет на Камчатке" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-baikal-2.jpg" alt="Берег на Байкале" class="photo-grid__item"></div>
+            <div><img src="images/photo-grid-ergaki.jpg" alt="Еще одни горы в тумане" class="photo-grid__item"></div>
         </section>
         <section class="places">
             <div class="place">
