--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </a>
         <ul class="header__lang-links">
             <li>
-                <a href="#" class="header__lang-link">Ru</a>
+                <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
             </li>
             <li>
-                <a href="#" class="header__lang-link header__lang-link_inactive">En</a>
+                <a href="#" class="header__lang-link">En</a>
             </li>
         </ul>
     </header>
@@ -32,11 +32,11 @@
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
-                <li> Часовых поясов 11</li>
-                <li>Объектов природного наследия ЮНЕСКО 12</li>
-                <li>Объектов культурного наследия ЮНЕСКО 16</li>
-                <li>Природных заповедников 105</li>
-                <li>Аэропортов 241</li>
+                <li> Часовых поясов <span class="intro__span-accent">11</span></li>
+                <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+                <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+                <li>Природных заповедников <span class="intro__span-accent">105</span></li>
+                <li>Аэропортов <span class="intro__span-accent">241</span></li>
             </ul>
         </section>
         <section class="photo-grid">
@@ -129,11 +129,13 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-        <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-        <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-        <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-        <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+        <nav class="footer__menu">
+            <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+            <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+            <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+            <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+            <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+        </nav>
         <p class="footer__copyright">&copy; 2022 Петрова Настя</p>
     </footer>
 </body>
